<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                android:id="@+id/playContainer"
                >

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/linearLayout">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/die1"
                android:src="@drawable/d1"
                android:layout_weight="50"
                />
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/die2"
                android:src="@drawable/d1"
                android:layout_weight="50"
                />
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            android:id="@+id/btnRoll"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="83dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold"
            android:id="@+id/btnHold"
            android:layout_marginRight="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="83dp"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/player"
            android:id="@+id/lblInfo"
            android:layout_marginTop="48dp"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/score"
            android:id="@+id/lblScore" android:layout_below="@+id/lblInfo" android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rank"
            android:id="@+id/lblRank" android:layout_below="@+id/lblScore" android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/winner"
            android:id="@+id/btnWinner" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:visibility="invisible"
            />
</RelativeLayout>