<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
              android:layout_height="match_parent"
        >


    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rounds"
                android:id="@+id/lblRoundsName"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rounds"
                android:id="@+id/lblRounds"
                android:layout_marginBottom="10dp"/>

    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/minScore"
                android:id="@+id/lblMinScoreName"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/minScore"
                android:id="@+id/lblMinScore"
                android:layout_marginBottom="10dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/maxScore"
                android:id="@+id/lblMaxScoreName"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/maxScore"
                android:id="@+id/lblMaxScore"
                android:layout_marginBottom="10dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/avgScore"
                android:id="@+id/lblAvgScoreName"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/avgScore"
                android:id="@+id/lblAvgScore"
                android:layout_marginBottom="10dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ones"
                android:id="@+id/lblOnesName"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ones"
                android:id="@+id/lblOnes"
                android:layout_marginBottom="10dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/twos"
                android:id="@+id/lblTwosName"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/twos"
                android:id="@+id/lblTwos"
                android:layout_marginBottom="10dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/threes"
                android:id="@+id/lblThreesName"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/threes"
                android:id="@+id/lblThrees"
                android:layout_marginBottom="10dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fours"
                android:id="@+id/lblFoursName"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fours"
                android:id="@+id/lblFours"
                android:layout_marginBottom="10dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fives"
                android:id="@+id/lblFivesName"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fives"
                android:id="@+id/lblFives"
                android:layout_marginBottom="10dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sixes"
                android:id="@+id/lblSixesName"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sixes"
                android:id="@+id/lblSixes"
                android:layout_marginBottom="10dp"/>
    </TableRow>
</TableLayout>