<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pickColorContainer">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Player 1 Color"
                android:id="@+id/lblPlayerColor"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/colorRed"
                android:id="@+id/lblColorRed"
                android:layout_below="@+id/lblPlayerColor"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                />
    <SeekBar
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/barRed"
            android:layout_marginTop="12dp"
            android:layout_below="@id/lblColorRed"
            android:layout_centerHorizontal="true"
            android:max="255"
            />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/colorGreen"
                android:id="@+id/lblColorGreen"
                android:layout_below="@+id/barRed"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                />
    <SeekBar
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/barGreen"
            android:layout_below="@+id/lblColorGreen"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:max="255"
            />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/colorBlue"
                android:id="@+id/lblColorBlue"
                android:layout_below="@+id/barGreen"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                />
    <SeekBar
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/barBlue"
            android:layout_below="@+id/lblColorBlue"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:max="255"
            />




    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/btnNextColor"
            android:layout_below="@+id/barBlue"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"/>
</RelativeLayout>